fix: delete card button visibility fixed

--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -130,12 +130,17 @@
   padding: 0;
   margin: 0;
   transition: transform opacity 0.3s linear;
+  display: none;
 }
 
 .card__delete-button:hover {
   cursor: pointer;
   opacity: 0.7;
   transform: rotate(-75deg);
+}
+
+.card:hover .card__delete-button {
+  display: block;
 }
 
 @media screen and (max-width: 1004px) {
